# ITMO-CT

./: README.md
ExceptionsParser/src/: Main.java
ExceptionsParser/src/expression/: ExpressionTest.java
Others/Bioinformatics/1.MedianString/: solution.py
Others/Bioinformatics/2.RandomizedMotifSearch/: solution.py
Others/Bioinformatics/3.StringReconstruction/: input.txt  solution.py
Others/Bioinformatics/4.StringAligning/: solution.py
Others/Bioinformatics/5.ShortestTransformation/: solution.py
Others/Bioinformatics/6.AdditivePhylogeny/: input.txt  solution.py
Others/Bioinformatics/7.LongestRepeat/: solution.py
Others/Bioinformatics/7.MultipleApproximatePatternMatching/: solution.py
Others/Bioinformatics/7.SuffixArrayPatternMatching/: solution.py
Others/Bioinformatics/8.BaumWelchLearning/: input.txt  output.txt  solution.py
Others/Bioinformatics/8.Viterbi/: output.txt  solution.py
Others/CodingTheory/: A.cpp  J.cpp
Others/DataAnalysis/lab1/: Pipfile  task1.ipynb  task2.ipynb  task3.ipynb
Others/DataAnalysis/lab3/: main.ipynb
Others/DataAnalysis/lab4/: main.ipynb
Others/DataAnalysis/lab5/: main.ipynb
Others/DataAnalysis/lab6/: SVNH.ipynb  lena.ipynb
Others/DataAnalysis/lab7/: main.ipynb
Others/FrontendBasics/js/: A.js  B.js  C.js  D.js  E.js  F.js
Others/FunctionalProgramming/: LICENSE  README.md  stack.yaml
Others/FunctionalProgramming/hw0/: README.md  hw0.cabal
Others/FunctionalProgramming/hw0/src/: Lib.hs
Others/FunctionalProgramming/hw0/src/HW0/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
Others/FunctionalProgramming/hw1/: README.md  hw1.cabal
Others/FunctionalProgramming/hw2/: README.md  hw2.cabal
Others/FunctionalProgramming/hw3/: README.md  hw3.cabal
Others/FunctionalProgramming/hw3/app/: Main.hs
Others/FunctionalProgramming/hw3/src/HW3/: Action.hs  Base.hs  Evaluator.hs  Parser.hs  Pretty.hs
Others/JavaAdvanced/info.kgeorgiy.ja.popov/: module-info.java
Others/MachineLearning/: README.md
Others/MachineLearning/contest/: taskA.py  taskB.py  taskC.py  taskD.py  taskE.py  taskK.py  taskL.py  taskM.py  taskN.py  taskO.py  taskP.py
Others/OperationSystems/: README.md
Others/OperationSystems/lab1/: script1.sh  script10.sh  script11.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh  script7.sh  script8.sh  script9.sh
Others/OperationSystems/lab2/: script1.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh  script7.sh  script8.sh
Others/OperationSystems/lab3/: script1.sh  script2.sh  (+1 more)
Term-1/Java/: BinarySearchMissing.java  RunMe.java  ScanNoBuffer.java  SumLong.java
Term-1/LabAlgo/: README.md
Term-1/LinearAlgebra/: lab.py
Term-1/линал/: lab.py  lab3.py
Term1/Algorithms/: README.md
Term1/LinearAlgebra/: lab1.py  lab3.py
Term1/Prog/: RUNME.md  TESTS.md
Term2/Algorithms/: README.md
Term2/Cpp/: lab1.c  lab2.c  lab3.c  lab4.cpp  tasks.docx
Term2/Programming/: README.md  TESTS.md
Thesis/Шаблоны/: Presentation Example.pptx  thesis-template.docx  Ссылки.docx
(+1224 files in other folders)
