name:                hw0
version:             0.1.0.0
synopsis:            Synopsis for task 0
description:         Task 0 for FP ITMO course

homepage:            https://github.com/Rytuo/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Popov Aleksandr
maintainer:          popov.aleksandr@niuitmo.ru
copyright:           2021 Popov Aleksandr

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       HW0.T1
                       HW0.T2
                       HW0.T3
                       HW0.T4
                       HW0.T5
                       HW0.T6
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
