name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com/Rytuo/fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Popov Aleksandr
maintainer:          popov.aleksandr@niuitmo.ru
copyright:           2021 Popov Aleksandr

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                    ,  HW3.Base
                    ,  HW3.Parser
                    ,  HW3.Pretty
                    ,  HW3.Evaluator
                    ,  HW3.Action
  ghc-options:         -Wall
  build-depends:       base
                     , megaparsec
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , transformers
                     , scientific
                     , parser-combinators
                     , text
                     , containers
                     , bytestring
                     , zlib
                     , serialise
                     , directory
                     , time
                     , random
  default-language:    Haskell2010

executable hi
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw3
                     , haskeline
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw3
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
